Add "Endless" Fuel Base Station module to test Rotation method in iOS6. 1. info.plist turn on all the supported orientation 2. If root not intend to rotate, limit it through the supportOrientation method 3. Child view controller can override the orientation value

--- a/FireRocket/en.lproj/MainStoryboard.storyboard
+++ b/FireRocket/en.lproj/MainStoryboard.storyboard
@@ -16,11 +16,29 @@
                                 <subviews>
                                     <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4Lp-Hi-Pwc">
                                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="427" id="AFF-BW-F4u"/>
+                                        </constraints>
                                     </webView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="M44-RM-TMf">
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                        <state key="normal" title="Add Fuel">
+                                            <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <state key="highlighted">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="showFuelBase:" destination="5" eventType="touchUpInside" id="6xk-sK-gNT"/>
+                                            <action selector="showFuelBase:" destination="12" eventType="touchUpInside" id="SAJ-wT-aeq"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstItem="4Lp-Hi-Pwc" firstAttribute="top" secondItem="9" secondAttribute="top" type="default" id="4fB-ak-BSw"/>
+                                    <constraint firstItem="M44-RM-TMf" firstAttribute="top" secondItem="9" secondAttribute="top" constant="20" symbolic="YES" type="default" id="05R-Ss-cP5"/>
+                                    <constraint firstItem="M44-RM-TMf" firstAttribute="centerX" secondItem="4Lp-Hi-Pwc" secondAttribute="centerX" type="default" id="1x5-6B-GhW"/>
                                     <constraint firstItem="4Lp-Hi-Pwc" firstAttribute="trailing" secondItem="9" secondAttribute="trailing" type="default" id="neU-AP-Thl"/>
                                     <constraint firstItem="4Lp-Hi-Pwc" firstAttribute="bottom" secondItem="9" secondAttribute="bottom" type="default" id="npR-yz-Ql2"/>
                                     <constraint firstItem="4Lp-Hi-Pwc" firstAttribute="leading" secondItem="9" secondAttribute="leading" type="default" id="nyt-d9-nYZ"/>
@@ -66,20 +84,6 @@
             <point key="canvasLocation" x="360" y="476"/>
         </scene>
     </scenes>
-    <classes>
-        <class className="DataViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/DataViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="dataLabel" candidateClass="UILabel"/>
-            </relationships>
-        </class>
-        <class className="NSLayoutConstraint" superclassName="NSObject">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
-        </class>
-        <class className="RootViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/RootViewController.h"/>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
